Setup Apache logs

--- a/provision/apache2.conf
+++ b/provision/apache2.conf
@@ -16,12 +16,11 @@ Group ${APACHE_RUN_GROUP}
 
 HostnameLookups Off
 
-LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
-
-CustomLog ${APACHE_LOG_DIR}/access.log combined
-ErrorLog ${APACHE_LOG_DIR}/error.log
+LogFormat "[apache:access] %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" tagged-combined
+CustomLog "|$ cat > /dev/stdout" tagged-combined
 
 LogLevel warn
+ErrorLog "|$ xargs -I % echo [apache:error] % > /dev/stderr"
 
 IncludeOptional mods-enabled/*.load
 IncludeOptional mods-enabled/*.conf
